--- a/package.json
+++ b/package.json
@@ -16,17 +16,25 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-scroll-area": "^1.2.4",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.66.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
